--- a/VDS.BusinessLogic/VDS.BusinessLogic.csproj
+++ b/VDS.BusinessLogic/VDS.BusinessLogic.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B8D2DF9B-FD4B-44CD-85CE-D94646F79584}</ProjectGuid>
+    <ProjectGuid>{96247206-2BF0-4508-AFDA-77869D48BADD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>VDS.Domain</RootNamespace>
-    <AssemblyName>VDS.Domain</AssemblyName>
+    <RootNamespace>VDS.BusinessLogic</RootNamespace>
+    <AssemblyName>VDS.BusinessLogic</AssemblyName>
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -32,7 +32,6 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,8 +41,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DataModels\Company.cs" />
-    <Compile Include="DataModels\Employee.cs" />
+    <Compile Include="DataStore\DataStoreService.cs" />
+    <Compile Include="DataStore\IDataStoreService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
